--- a/src/vista/TeacherABC.form
+++ b/src/vista/TeacherABC.form
@@ -52,9 +52,9 @@
                           <Component id="jTextName" alignment="1" max="32767" attributes="0"/>
                           <Component id="jTextLastName1" alignment="1" max="32767" attributes="0"/>
                           <Component id="jTextAddress" max="32767" attributes="0"/>
-                          <Component id="jTextField1" max="32767" attributes="0"/>
-                          <Component id="jTextField2" max="32767" attributes="0"/>
-                          <Component id="jTextField3" pref="174" max="32767" attributes="0"/>
+                          <Component id="jTextPhone" max="32767" attributes="0"/>
+                          <Component id="jTextMail" max="32767" attributes="0"/>
+                          <Component id="jTextPassword" pref="174" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -87,17 +87,17 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextPhone" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField2" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextMail" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel6" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jTextField3" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="jTextPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace pref="54" max="32767" attributes="0"/>
@@ -137,11 +137,11 @@
     </Component>
     <Component class="javax.swing.JTextField" name="jTextAddress">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField1">
+    <Component class="javax.swing.JTextField" name="jTextPhone">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField2">
+    <Component class="javax.swing.JTextField" name="jTextMail">
     </Component>
-    <Component class="javax.swing.JTextField" name="jTextField3">
+    <Component class="javax.swing.JTextField" name="jTextPassword">
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel5">
       <Properties>
