--- a/src/vista/TeacherUI_ABC.form
+++ b/src/vista/TeacherUI_ABC.form
@@ -13,10 +13,13 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Principal"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jMenuItemPrincipalActionPerformed"/>
+              </Events>
             </MenuItem>
-            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemClose">
+            <MenuItem class="javax.swing.JMenuItem" name="jMenuItemSearch">
               <Properties>
-                <Property name="text" type="java.lang.String" value="Salir"/>
+                <Property name="text" type="java.lang.String" value="Buscar"/>
               </Properties>
             </MenuItem>
           </SubComponents>
