--- a/src/vista/LoginUI.form
+++ b/src/vista/LoginUI.form
@@ -11,6 +11,9 @@
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
     <Property name="title" type="java.lang.String" value="Login"/>
+    <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+      <Color blue="c0" green="c0" id="lightGray" palette="1" red="c0" type="palette"/>
+    </Property>
     <Property name="name" type="java.lang.String" value="Login" noResource="true"/>
     <Property name="resizable" type="boolean" value="false"/>
   </Properties>
