--- a/src/vista/TeacherUI_ABC.form
+++ b/src/vista/TeacherUI_ABC.form
@@ -277,7 +277,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Nombre"/>
+        <Property name="text" type="java.lang.String" value="Nombre*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextName">
@@ -287,7 +287,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Apellido Paterno"/>
+        <Property name="text" type="java.lang.String" value="Apellido Paterno*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextLastName1">
@@ -297,7 +297,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Apellido Materno"/>
+        <Property name="text" type="java.lang.String" value="Apellido Materno*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextLastName2">
@@ -308,7 +308,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel4">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Direccion"/>
+        <Property name="text" type="java.lang.String" value="Direccion*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextAddress">
@@ -333,7 +333,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel6">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Telefono celular"/>
+        <Property name="text" type="java.lang.String" value="Telefono celular*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel8">
@@ -348,7 +348,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel9">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Email laboral"/>
+        <Property name="text" type="java.lang.String" value="Email laboral*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextEmailWork">
@@ -390,10 +390,9 @@
     <Component class="javax.swing.JComboBox" name="jComboBoxLevel">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="0"/>
-            <StringItem index="1" value="1"/>
-            <StringItem index="2" value="2"/>
+          <StringArray count="2">
+            <StringItem index="0" value="1"/>
+            <StringItem index="1" value="2"/>
           </StringArray>
         </Property>
       </Properties>
@@ -406,10 +405,9 @@
     <Component class="javax.swing.JComboBox" name="jComboBoxStatus">
       <Properties>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="3">
-            <StringItem index="0" value="0"/>
-            <StringItem index="1" value="1"/>
-            <StringItem index="2" value="2"/>
+          <StringArray count="2">
+            <StringItem index="0" value="1"/>
+            <StringItem index="1" value="2"/>
           </StringArray>
         </Property>
       </Properties>
@@ -436,7 +434,7 @@
     </Container>
     <Component class="javax.swing.JLabel" name="jLabel11">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Fecha Ingreso"/>
+        <Property name="text" type="java.lang.String" value="Fecha Ingreso*"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel12">
@@ -517,7 +515,7 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel13">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Contrase&#xf1;a"/>
+        <Property name="text" type="java.lang.String" value="Contrase&#xf1;a*"/>
       </Properties>
     </Component>
     <Component class="com.toedter.calendar.JDateChooser" name="jDateStart">
